# ADService

./: CMakeLists.txt  Makefile  README.md  build.sh  checkstatus.sh  compressdsl.sh  core.debug1  core.debug2  core.debug3  core_srcpcore_http_server.h  core_srcpcore_main.cpp  core_srcpcore_start.cpp  core_srcpcore_threadlocal_manager.h  debug.sh  run.sh  start_http_server.sh  test.sh  timeout.sh
common/: constants.h  functions.h  log.h.gch  platform.h  serialize.h  types.h
conf/: adselect.conf  adselect.conf.bak  aerospike.conf  click.conf  debug.conf  log.conf  log.conf.bak  logrotate.conf  service.conf  test.conf  track_log.conf
core_src/: config_types.h  core.h  core_adselect_manager.cpp  core_adselect_manager.h  core_cache_manager.cpp  core_cache_manager.h  core_config_manager.cpp  core_config_manager.h  core_daemon.cpp  core_executor.cpp  core_executor.h  core_http_server.cpp  core_http_server.h  core_ip_manager.cpp  core_ip_manager.h  core_main.cpp  core_server.cpp  core_start.cpp  core_threadlocal_manager.cpp  core_threadlocal_manager.h
core_srcpnet/: click_service.cpp  click_service.h  core_cgi.h  log_pusher.cpp  log_pusher.h
elasticsearch/: elasticsearch.cpp  elasticsearch.h  http.cpp  http.h
html/: show_adx.html  show_ssp.html
jni/: Makefile
mttyJava/: makeJniHeader.sh  pom.xml
protocol/: MakeProtocol.sh  avdl2cpp.sh
unit_test/: Makefile  collect_err.sh  collect_kafkalog.sh  http_server.cpp  http_server_muduo.cpp  http_server_test.cpp  kafka.make  kafka_checker  kafka_checker.cpp  locallog_collector.cpp  locallog_collector.make  show_log.sh  (+6 more)
(+140 files in other folders)
